[project]
name = "resume-env"
version = "0.1.0"
description = "Resume Selection OpenEnv Environment"
authors = [
    { name="Kusuma", email="kusuma200528@gmail.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv>=0.2.0"
]

[project.scripts]
server = "app:app"

[tool.openenv]
entry_point = "app:app"